RemoteLazyInputStreamThread::Dispatch should use the overloaded Unused operator to leak
Categories
(Core :: DOM: File, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr115 | --- | unaffected |
firefox124 | --- | wontfix |
firefox125 | --- | wontfix |
firefox126 | --- | fixed |
People
(Reporter: jstutte, Assigned: jstutte)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
See nika's bug 1767344 comment 94:
The failure in https://searchfox.org/mozilla-central/rev/28cc363411d2029aed04c969c8f98785cae110db/dom/file/ipc/RemoteLazyInputStreamThread.cpp#154 is a minor bug, because the already_AddRefed is leaked by casting to (void). This does leak the reference in release builds, but will hit this assertion in debug builds.
In order to avoid the assertion you need to use the Unused << overloaded operator (https://searchfox.org/mozilla-central/rev/28cc363411d2029aed04c969c8f98785cae110db/mfbt/AlreadyAddRefed.h#142-150).
Assignee | ||
Comment 1•8 months ago
|
||
Updated•8 months ago
|
Assignee | ||
Updated•8 months ago
|
Assignee | ||
Updated•8 months ago
|
Assignee | ||
Comment 2•8 months ago
|
||
This is just creating noise in debug builds, there is no effect on users.
Updated•8 months ago
|
Comment 5•8 months ago
|
||
The patch landed in nightly and beta is affected.
:jstutte, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox125
towontfix
.
For more information, please visit BugBot documentation.
Assignee | ||
Updated•8 months ago
|
Description
•